examples/errors/Broken.flx
module Errors.Broken {
  fun value() { 1; }
}
